--- a/index.html
+++ b/index.html
@@ -113,6 +113,31 @@
     }
 });
 
+       const XLSX = require('xlsx');
+
+fileInput.addEventListener('change', (e) => {
+    const selectedFile = e.target.files[0];
+
+    if (selectedFile) {
+        const reader = new FileReader();
+
+        reader.onload = (event) => {
+            const data = event.target.result;
+            const workbook = XLSX.read(data, { type: 'binary' });
+            const sheetName = workbook.SheetNames[0]; // Assuming the data is in the first sheet
+            const sheet = workbook.Sheets[sheetName];
+            const jsonData = XLSX.utils.sheet_to_json(sheet);
+
+            // Now, jsonData contains the extracted data from the Excel file.
+            // You can proceed to preprocess and analyze it.
+        };
+
+        reader.readAsBinaryString(selectedFile);
+    } else {
+        // Handle the case when no file is selected.
+    }
+});
+
 </script>
 
 </body>
