--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         // Function to perform analysis using OpenAI API with ChatGPT
         async function performOpenAIAnalysis(jsonData) {
-            const apiKey = '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'; // Replace with your actual API key
+            const apiKey = '${{ secrets.OPENAI_API_KEY }}'; // Replace with your actual API key
             const textToAnalyze = JSON.stringify(jsonData);
 
             try {
